left aligned footers on mobile; fixed padding on mobile footer

--- a/scss/components/_sections.scss
+++ b/scss/components/_sections.scss
@@ -123,9 +123,8 @@ li:hover {
 }
 
 .home-footer-text {
-  font-size: 16px;
   text-align: right;
-  font-size: 14px;
+  font-size: 13px;
   letter-spacing: 0.7px;
   font-family: "IBMPlexMono-Text", "Courier New", Courier, monospace;
   text-transform: uppercase;
@@ -135,7 +134,7 @@ li:hover {
 .project-footer-text {
   text-align: right;
   color: $grey30;
-  font-size: 14px;
+  font-size: 13px;
   letter-spacing: 0.7px;
   font-family: "IBMPlexMono-Text", "Courier New", Courier, monospace;
   text-transform: uppercase;
@@ -197,9 +196,9 @@ li:hover {
   }
 
   .projectpagelinks {
-    padding-top: 1rem;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+    padding-top: 4rem;
+    padding-left: 0;
+    padding-right: 0;
     font-size: 18px;
   }
 
@@ -212,13 +211,13 @@ li:hover {
   }
 }
 
-@media (max-width: 767px) {
+@media (min-width: 512px) and (max-width: 767px) {
   .home-footer-text {
-    text-align: center;
+    text-align: left;
     padding-top: 2rem;
   }
   .project-footer-text {
-    text-align: center;
+    text-align: left;
     padding-top: 2rem;
   }
   .socialLink-last {
@@ -226,10 +225,33 @@ li:hover {
 }
 
   .aboutpagelinks {
-    text-align: center;
+    text-align: left;
   }
   .projectpagelinks {
-    text-align: center;
+    text-align: left;
+  }
+}
+
+@media (max-width: 512px) {
+  .home-footer-text {
+    text-align: left;
+    padding-top: 2rem;
+  }
+  .project-footer-text {
+    text-align: left;
+    padding-top: 2rem;
+    font-size: 12px;
+
+  }
+  .socialLink-last {
+    margin-right: 0;
+}
+
+  .aboutpagelinks {
+    text-align: left;
+  }
+  .projectpagelinks {
+    text-align: left;
   }
 }
 
@@ -457,7 +479,7 @@ li:hover {
 
 @media (max-width: 512px) {
   .box-footer {
-    margin: 1rem 0;
+    margin: 1.5rem 0;
   }
 }
 
@@ -1104,6 +1126,7 @@ li:hover {
   .footer-top-section {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+    padding-top: 4rem;
   }
 }
 
